# powermenu

./: CMakeLists.txt  README.md
src/: constants.h  main.cpp  mainWindow.cpp  mainWindow.h  syncthingApiKey.h.in
